# magic-mirror

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  image_operations.cc  image_operations.h  magic_mirror_client.cc  magic_mirror_server.cc
protos/: magicmirror.proto
